fix(style): adjust spacing for article header and mixins to use medium spacing

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -21,7 +21,7 @@
 }
 
 .tv-article__header {
-  margin-bottom: variables.$tv-article-spacing-2xl;
+  margin-bottom: variables.$tv-article-spacing-md;
   text-align: left;
 }
 
